# lp-0002-private-multisig-rc5

./: .deny.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  NOTICE  README-LP0002.md  README.md  demo.sh  docker-compose.override.yml  docker-compose.yml  flake.nix
.github/workflows/: bench-regression.yml  ci.yml  lp0002-ci.yml  publish_images.yml
basecamp/: README.md  metadata.json  module.json
basecamp/qml/: Main.qml
bedrock/: deployment-settings.yaml  docker-compose.yml
completions/: README.md
completions/bash/: wallet
completions/zsh/: _wallet
docs/: LP-0002-solution.md  lp0002-benchmarks.md  lp0002-reliability.md
docs/LEZ testnet v0.1 tutorials/: keycard.md  token-transfer.md
docs/benchmarks/: README.md  crypto_primitives_bench.md  cycle_bench.md  integration_bench.md
examples/program_deployment/: Cargo.toml  README.md
examples/program_deployment/methods/guest/: Cargo.toml
examples/program_deployment/src/: lib.rs  msig_demo.rs
idl/: lp0002-msig.idl.json
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
integration_tests/tests/: account.rs  amm.rs  ata.rs  block_size_limit.rs  bridge.rs  indexer_block_batching.rs  indexer_ffi_block_batching.rs  indexer_ffi_state_consistency.rs  indexer_ffi_state_consistency_with_labels.rs  indexer_state_consistency.rs  indexer_state_consistency_with_labels.rs  indexer_test_run.rs  indexer_test_run_ffi.rs  keys.rs  private_pda.rs  program_deployment.rs  shared_accounts.rs  token.rs  tps.rs  vault.rs  wallet_ffi.rs
integration_tests/tests/auth_transfer/: private.rs  public.rs
integration_tests/tests/indexer_ffi_helpers/: mod.rs
lee/key_protocol/: Cargo.toml
lee/key_protocol/src/key_management/: ephemeral_key_holder.rs  group_key_holder.rs  mod.rs  secret_holders.rs
lee/state_machine/: Cargo.toml  build.rs
lee/state_machine/core/: Cargo.toml
lee/state_machine/core/src/: circuit_io.rs  commitment.rs  encoding.rs  error.rs  lib.rs  nullifier.rs  program.rs
lee/state_machine/core/src/account/: data.rs
lee/state_machine/core/src/encryption/: mod.rs  shared_key_derivation.rs
lee/state_machine/src/: error.rs  lib.rs  program.rs  state.rs  validated_state_diff.rs
lee/state_machine/src/encoding/: privacy_preserving_transaction.rs  program_deployment_transaction.rs  public_transaction.rs
lee/state_machine/src/privacy_preserving_transaction/: circuit.rs  message.rs  transaction.rs
lee/state_machine/src/program_deployment_transaction/: message.rs  transaction.rs
lee/state_machine/src/public_transaction/: message.rs  transaction.rs
lee/state_machine/src/signature/: mod.rs  private_key.rs  public_key.rs
lez/: Cargo.toml
lez/common/: Cargo.toml
lez/common/src/: block.rs  config.rs  lib.rs  test_utils.rs  transaction.rs
lez/configs/docker-all-in-one/: sequencer_config.json
lez/docker/: risc0-base.Dockerfile
lez/explorer_service/: docker-compose.yml
lez/explorer_service/src/components/: block_preview.rs
lez/explorer_service/src/pages/: block_page.rs
lez/indexer/core/: Cargo.toml
lez/indexer/ffi/: Cargo.toml  indexer_ffi.h
lez/indexer/service/: Dockerfile  docker-compose.yml
lez/keycard_wallet/: Cargo.toml  wallet_with_keycard.sh
lez/keycard_wallet/keycard_applets/: LEE_keycard.cap  math.cap
lez/keycard_wallet/python/: keycard_wallet.py
lez/keycard_wallet/src/: lib.rs  python_path.rs
lez/keycard_wallet/tests/: force_unpower.py  keycard_power_recovery_tests.sh  keycard_test_3.sh  keycard_tests.sh  keycard_tests_2.sh
lez/mempool/src/: lib.rs
lez/sequencer/core/: Cargo.toml
lez/sequencer/core/src/: block_publisher.rs  block_store.rs  config.rs  lib.rs  mock.rs
lez/sequencer/service/: Cargo.toml  Dockerfile  docker-compose.yml
lez/src/: lib.rs
lez/storage/: Cargo.toml
lez/testnet_initial_state/: Cargo.toml
lez/testnet_initial_state/src/: lib.rs
lez/wallet/: Cargo.toml
lez/wallet-ffi/: Cargo.toml  cbindgen.toml  wallet_ffi.h
lez/wallet-ffi/src/: account.rs  bridge.rs  error.rs  generic_transaction.rs  keys.rs  lib.rs  pinata.rs  program_deployment.rs  transfer.rs  types.rs
lez/wallet/src/: account.rs  account_manager.rs  helperfunctions.rs  lib.rs  poller.rs  signing.rs  storage.rs
lez/wallet/src/cli/: account.rs  group.rs  keycard.rs  mod.rs
lez/wallet/src/cli/programs/: amm.rs  ata.rs  bridge.rs  mod.rs  native_token_transfer.rs  pinata.rs  token.rs  vault.rs
lez/wallet/src/program_facades/: amm.rs  ata.rs  bridge.rs  mod.rs  pinata.rs  token.rs  vault.rs
lez/wallet/src/program_facades/native_token_transfer/: deshielded.rs  mod.rs  private.rs  public.rs  shielded.rs
lez/wallet/src/storage/: key_chain.rs  persistent.rs
program_methods/guest/: Cargo.toml
programs/amm/: Cargo.toml
programs/amm/core/: Cargo.toml
programs/amm/src/: add.rs  new_definition.rs  remove.rs  swap.rs  tests.rs
programs/associated_token_account/: Cargo.toml
programs/associated_token_account/core/: Cargo.toml
programs/associated_token_account/src/: burn.rs  create.rs  tests.rs  transfer.rs
programs/bridge/core/: Cargo.toml
programs/clock/core/: Cargo.toml
programs/faucet/core/: Cargo.toml
programs/msig/core/: Cargo.toml
programs/token/: Cargo.toml
programs/token/core/: Cargo.toml
programs/token/src/: burn.rs  initialize.rs  mint.rs  new_definition.rs  print_nft.rs  tests.rs  transfer.rs
programs/vault/core/: Cargo.toml
scripts/: lp0002-demo-rc5.sh  lp0002-resume-rc5.sh  lp0002-testnet-run.sh
test_fixtures/: Cargo.toml
test_fixtures/src/: config.rs  lib.rs  setup.rs
test_program_methods/guest/: Cargo.toml
tools/crypto_primitives_bench/: Cargo.toml  README.md
tools/crypto_primitives_bench/benches/: primitives.rs
tools/cycle_bench/: Cargo.toml  README.md
tools/cycle_bench/benches/: verify.rs
tools/cycle_bench/src/: lib.rs  main.rs  ppe.rs  stats.rs
tools/cycle_bench/src/ppe/: ppe_impl.rs
tools/integration_bench/: Cargo.toml  README.md
tools/integration_bench/src/: harness.rs  main.rs
tools/integration_bench/src/scenarios/: amm.rs  fanout.rs  mod.rs  parallel.rs  private.rs  token.rs
(+46 files in other folders)
