[package]
name = "wallet-ffi"
version = "0.1.0"
edition = "2021"
license = { workspace = true }

[lints]
workspace = true

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
wallet.workspace = true
lee.workspace = true
lee_core.workspace = true
sequencer_service_rpc = { workspace = true, features = ["client"] }
common.workspace = true

tokio.workspace = true
key_protocol.workspace = true
serde_json.workspace = true
risc0-zkvm.workspace = true

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
tempfile = "3"

[features]
default = ["prove"]
prove = ["lee/prove"]
