[package]
name = "wallet"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
lee_core.workspace = true
lee.workspace = true
common.workspace = true
authenticated_transfer_core.workspace = true
key_protocol.workspace = true
sequencer_service_rpc = { workspace = true, features = ["client"] }
amm_core.workspace = true
testnet_initial_state.workspace = true
token_core.workspace = true
ata_core.workspace = true
vault_core.workspace = true
bridge_core.workspace = true
keycard_wallet.workspace = true

bip39.workspace = true
pyo3.workspace = true
rpassword = "7"
zeroize.workspace = true

anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
humantime-serde.workspace = true
humantime.workspace = true
tokio = { workspace = true, features = ["macros"] }
clap.workspace = true
base58.workspace = true
hex.workspace = true
rand.workspace = true
itertools.workspace = true
sha2.workspace = true
futures.workspace = true
async-stream.workspace = true
indicatif = { version = "0.18.3", features = ["improved_unicode"] }
optfield = "0.4.0"
url.workspace = true
derive_more = { workspace = true, features = ["display"] }

[features]
# Enables `keycard get-private-keys` command that prints sensitive secret keys to terminal.
# Never enable in production builds.
keycard-debug = []

[dev-dependencies]
tempfile.workspace = true
key_protocol = { workspace = true, features = ["test_utils"] }
bincode.workspace = true
