[package]
name = "programs"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
lee_core.workspace = true
authenticated_transfer_core.workspace = true
clock_core.workspace = true
token_core.workspace = true
token_program.workspace = true
amm_core.workspace = true
amm_program.workspace = true
ata_core.workspace = true
ata_program.workspace = true
faucet_core.workspace = true
bridge_core.workspace = true
vault_core.workspace = true
risc0-zkvm.workspace = true
serde = { workspace = true, default-features = false }
