[package]
name = "test_programs"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
lee_core.workspace = true
msig_core.workspace = true
authenticated_transfer_core.workspace = true
clock_core.workspace = true
faucet_core.workspace = true

risc0-zkvm.workspace = true
serde = { workspace = true, default-features = false }
