[package]
name = "cycle_bench"
version = "0.1.0"
edition = "2024"
license = { workspace = true }
publish = false

[lints]
workspace = true

[features]
default = []
prove = ["lee/prove", "risc0-zkvm/prove"]
ppe = ["prove"]

[dependencies]
lee = { workspace = true }
lee_core = { workspace = true, features = ["host"] }
authenticated_transfer_core.workspace = true
clock_core.workspace = true
token_core.workspace = true
amm_core.workspace = true
ata_core.workspace = true

risc0-zkvm.workspace = true
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { workspace = true }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "verify"
harness = false
required-features = ["ppe"]
