[package]
name = "lee_core"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
risc0-zkvm.workspace = true
borsh.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
bytesize.workspace = true
base58.workspace = true
ml-kem = { workspace = true, optional = true, features = ["getrandom"] }
chacha20 = { version = "0.10" }

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
host = ["dep:ml-kem"]
test_utils = ["host"]
