[package]
name = "sequencer_core"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[lints]
workspace = true

[dependencies]
lee.workspace = true
lee_core.workspace = true
common.workspace = true
storage.workspace = true
mempool.workspace = true
logos-blockchain-zone-sdk.workspace = true
testnet_initial_state.workspace = true
faucet_core.workspace = true
bridge_core.workspace = true
vault_core.workspace = true

logos-blockchain-key-management-system-service.workspace = true
logos-blockchain-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
humantime-serde.workspace = true
tempfile.workspace = true
chrono.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rand.workspace = true
borsh.workspace = true
bytesize.workspace = true
hex.workspace = true
url.workspace = true
num-bigint.workspace = true
risc0-zkvm.workspace = true
futures.workspace = true

[features]
default = []
testnet = []
# Generate mock external clients implementations for testing
mock = []

[dev-dependencies]
futures.workspace = true
test_program_methods.workspace = true
lee = { workspace = true, features = ["test-utils"] }
key_protocol.workspace = true
